apps/my-test/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: my-test
  labels:
    kubernetes.io/metadata.name: my-test
    backstage.io/kubernetes-id: my-test
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
