apps/my-test/base/my-test-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-test-svc
  namespace: my-test
  annotations:
    external-dns.alpha.kubernetes.io/hostname: my-test.diegoluisi.eti.br
  labels:
    app: my-test
    version: 0.0.1
    backstage.io/kubernetes-id: my-test
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: my-test
